chapt7/chapt7_ws/log/build_2026-06-16_20-48-58/autopartol_robot/stderr.log
  File "/home/hzh/ros2_learn/chapt7/chapt7_ws/install/autopartol_robot/lib/python3.10/site-packages/autopartol_robot/partol_node.py", line 42
    f'{self.self.img_save_path_}img_{pose.translation.x:3.2f}_{pose.translation.y:3
    ^
SyntaxError: unterminated string literal (detected at line 42)

